--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+<link rel="icon" href="icon.png" type="image/png" />
+<title> Sensor Vault </title>
 </head>
 
 <body style="background-color:black">
